# mnstrv2server

./: .envrc.example  .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  build.rs  main.go
api/auth/: login.go  logout.go
api/mnstrs/collect/: collect.go  handler.go
api/mnstrs/manage/: handler.go  manage.go
api/users/: handler.go  register.go  show.go
generators/: level_xp.go  mnstr_xp.go
migrations/: 20250627122115_add_mnstrs.sql  20250704134412_add_stats_to_users.sql  20250706222409_add_wallet_and_transactions.sql  20250727113153_alter_mnstrs_for_stats.sql  20250903133615_create_users.down.sql  20250903133615_create_users.up.sql  20250903133815_create_sessions.down.sql  20250903133815_create_sessions.up.sql  20250903134037_create_mnstrs.down.sql  20250903134037_create_mnstrs.up.sql  20250903134208_create_wallets.down.sql  20250903134208_create_wallets.up.sql  20250903134341_create_transactions.down.sql  20250903134341_create_transactions.up.sql  20250903134449_create_items.down.sql  20250903134449_create_items.up.sql  20250903134602_create_user_items.down.sql  20250903134602_create_user_items.up.sql  20250903134719_create_mnstr_user_items.down.sql  20250903134719_create_mnstr_user_items.up.sql  20250903134822_create_effects.down.sql  20250903134822_create_effects.up.sql  20250903135451_create_item_effects.down.sql  20250903135451_create_item_effects.up.sql  20250905091955_transaction_amount_should_be_int.down.sql  20250905091955_transaction_amount_should_be_int.up.sql  20250921142541_remove_qr_code_from_user.down.sql  20250921142541_remove_qr_code_from_user.up.sql  20250921145719_add_phone_to_users.down.sql  20250921145719_add_phone_to_users.up.sql  20250921175328_add_verification_code_to_users.down.sql  20250921175328_add_verification_code_to_users.up.sql  20250925195516_create_battle_queue.down.sql  20250925195516_create_battle_queue.up.sql  20250929184721_create_battle_statuses.down.sql  20250929184721_create_battle_statuses.up.sql  20251001095640_create_battles.up.sql  20251004135825_alter_battle_status_for_game.down.sql  20251004135825_alter_battle_status_for_game.up.sql  20251004180821_remove_connected.down.sql  (+3 more)
models/: level.go  level_xp_generated.go  mnstr.go  mnstr_xp_generated.go  session.go  transaction.go  user.go  wallet.go
scripts/: randomize_created_at.go  update_from_mnstr_coins.go  update_from_mnstr_xp.go  update_xp.go
src/: main.rs
src/battle/: defend.rs  helpers.rs  magic.rs  mod.rs  physical.rs
src/database/: QUICK_REFERENCE.md  README.md  connection.rs  delete_macros.rs  insert_macros.rs  join_macros.rs  mod.rs  query_macros.rs  traits.rs  update_macros.rs  upsert_macros.rs  values.rs
src/graphql/: mod.rs  sessions.rs
src/graphql/clients/: mod.rs
src/graphql/mnstrs/: mutations.rs  queries.rs
src/graphql/users/: mod.rs  mutations.rs  queries.rs  utils.rs
src/models/: battle.rs  battle_log.rs  battle_status.rs  effect.rs  item.rs  item_effect.rs  mnstr.rs  mnstr_user_item.rs  mod.rs  session.rs  transaction.rs  user.rs  user_item.rs  wallet.rs
src/services/: helpers.rs  mnstrs.rs  mod.rs  sessions.rs  users.rs
src/utils/: emails.rs  mod.rs  passwords.rs  sessions.rs  strings.rs  time.rs  token.rs
src/websocket/: battle_queue.rs  helpers.rs  mod.rs
src/websocket/battle_queue/: handlers.rs  (+1 more)
