[package]
name = "mnstrv2server"
version = "1.0.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.43", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["os_rng"] }
futures = "0.3.31"
juniper = { version = "0.16.2", features = [
    "time",
    "anyhow",
    "backtrace",
    "url",
    "uuid",
] }
juniper_rocket = "0.9.0"
rocket_cors = "0.6.0"
pluralizer = "0.5.0"
anyhow = "1.0.99"
http = "1.3.1"
twilio = "1.1.0"
sendgrid = "0.24.1"
rocket_ws = "0.1.1"
static-files = "0.3.1"
formatjson = "0.3.1"
redis = { features = [
    "tls-rustls",
    "tokio-rustls-comp",
], git = "https://github.com/redis-rs/redis-rs.git", rev = "70552b0aa05078697869349e244dcf9644645d0b" }
tokio = { version = "1.47.1", features = ["sync"] }
futures-util = "0.3.31"
